--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "bootstrap-icons": "^1.10.3",
     "force": "^0.0.3",
     "jquery": "^3.6.4",
+    "ngx-mat-select-search": "^7.0.2",
     "ngx-socket-io": "^3.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
